# libchessticot

./: Cargo.toml  LICENSE.txt  README.md  changelog.md  release_process.md
benches/: benchmarks.rs
src/: board.rs  board_manip.rs  chess_move.rs  coords.rs  engine.rs  lib.rs  piece.rs  player.rs  position.rs  uci_long.rs
