[package]
name = "libchessticot"
version = "0.2.2"
edition = "2021"
description = "A chess library with engines"
repository = "https://github.com/Simisticot/libchessticot"
license = "MIT"

[dependencies]
rand = { version = "0.9.0", optional = true }

[features]
rng = ["dep:rand"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
